@@ -8,6 +8,7 @@ Release ...
 * tsort: Is now installed in "/usr/ccs/bin".
 * OpenSolaris-derived manual pages are now included for bdiff, newform,
   and fspec(5).
+* psrinfo: Fixed the computation of the "on-line since" time for Linux 2.6.
 
 Release 070115
 * deroff: Now recognizes the ".do" and ".xflag" requests as well as an "-xN"
